<resources>
    <string name="app_name">UBS</string>
    <string name="prompt_id">id</string>
    <string name="prompt_idnumber">id</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="prompt_lastname">last name</string>
    <string name="prompt_firstname">first name</string>
    <string name="prompt_phone">phone</string>
    <string name="prompt_email">email</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="action_reset_pwd"><u>Forget password?</u></string>
    <string name="action_confirm">Confirm</string>
    <string name="action_type_again">type your password again</string>
    <string name="prompt_tel">type your phone number</string>
    <string name="profile_edit">EDIT</string>
    <string name="back">BACK</string>
    <string name="view_profile">Personal Profile</string>

    <string name="title_activity_navigation">UBS</string>
    <string name="title_home">Home</string>
    <string name="title_club">Club</string>
    <string name="title_market">Market</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="title_btn_profile_my_posts">My Posts</string>
    <string name="title_btn_profile_my_club">My Clubs</string>
    <string name="title_release_new_information">Release New Information</string>
    <string name="title_club_detail">Club Detail</string>
    <string name="btn_create_post">create one</string>
    <string name="btn_sell">sell or lend</string>
    <string name="btn_my_posts">my post</string>
    <string name="title_menu">menu</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_release_new_info">Release</string>
    <string name="text_topic">Topic</string>
    <string name="text_contact">Contact</string>
    <string name="text_content">Content</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_topic">Topic</string>
    <string name="hint_content">Content</string>
    <string name="buy_borrow">BUY or BORROW</string>
    <string name="my_billings">My Billing</string>
    <string name="title_btn_profile_my_Blings">My Billings</string>
    <string name="btn_addonebilling">Add</string>
    <string name="hint_cardId">card Id</string>
    <string name="hint_username">user name</string>
    <string name="hint_userId">user Id</string>
    <string name="hint_Address">Address</string>
    <string name="btn_my_sell_or_lend"><![CDATA[My Sells & Lends]]></string>
    <string name="btn_my_buy_or_borrow"><![CDATA[My Buy & Borrows]]></string>
    <string name="btn_my_club">My CLub</string>
    <string name="btn_my_merchandise">my merchandise</string>
    <string name="title_btn_profile_my_buy_or_borrow">My Buy And Borrows</string>
    <string name="title_btn_profile_my_sell_or_lend">My Sells and Lends</string>
    <string name="release_new_club">Release new club</string>
    <string name="hint_clubName">Club Name</string>
    <string name="hint_description">Club Description</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="owner">Owner</string>
    <string name="contact">Contact</string>
    <string name="post_time">Post Time</string>
    <string name="content">Content</string>
    <string name="manager">Manager</string>
    <string name="category">Category</string>
    <string name="club_name">Club Name</string>
    <string name="introduction">Introduction</string>
    <string name="join_club">Join Club</string>
    <string name="quit_club">Quit Club</string>
    <string name="title_activity_mes_detail">MesDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_message_send">Send Message</string>
    <string name="btn_send_message">Send Message</string>
    <string name="menu_send">send to</string>
</resources>