<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_club"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_club" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        android:title="@string/title_market" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_profile" />
</menu>