<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment"
    android:layout_marginBottom="56dp">

    <Button
        android:id="@+id/view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/my_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_profile"
        android:text="@string/title_btn_profile_my_posts"
        />

    <Button
        android:id="@+id/my_Billings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_posts"
        android:text="@string/my_billings"
        />
</androidx.constraintlayout.widget.ConstraintLayout>